fix(mobile): fix one of the jumping issues

--- a/public/style/login.css
+++ b/public/style/login.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+  width: 100%; }
 
 .wedding-fullscreen {
   min-height: 100vh; }
